# MultiObjectTracking-OpenCV

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  TimDavid1.sh  TimDavid2.sh  camera-test.sh  config.yml  firstlobby.sh  sandboxhw.sh  walk-cut.mov
opencv/: README.md  build.sh
src/: camera.cpp  camera.h  config.cpp  config.h  display.cpp  display.h  main.cpp  objecttracker.cpp  objecttracker.h  track.cpp  track.h
src/Networking/: blob.h  blobSender.cpp  blobSender.h  sender.cpp  sender.h
src/trackers/: difference.cpp  difference.h
